# syphonpy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  imgui.ini  setup.py  syphon_cxx.hpp  syphon_cxx.mm  tester.py  wrapper.cpp
.github/workflows/: build.yml  publish.yml
examples/: README.md  Syphon.py  client.py  default.py  server.py
syphon_cxx_tests/: syphon_cxx_tests.mm
syphon_cxx_tests/syphon_cxx_tests.xcodeproj/: project.pbxproj
syphon_cxx_tests/syphon_cxx_tests.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
syphon_cxx_tests/syphon_cxx_tests.xcodeproj/project.xcworkspace/xcuserdata/njazz.xcuserdatad/: UserInterfaceState.xcuserstate
syphon_cxx_tests/syphon_cxx_tests.xcodeproj/xcuserdata/njazz.xcuserdatad/xcschemes/: syphon_cxx_tests.xcscheme  xcschememanagement.plist
